[package]
name = "zentrox"
version = "0.1.1-testing-0.3"
edition = "2021"
authors = ["wervice"]
description = "An open source home lab device frontend to administrate your devices"
documentation = "https://github.com/Wervice/zentrox/wiki"
homepage = "https://wervice.github.io/zentrox"
license = "Apache-2.0"
keywords = ["administration", "actix", "remote"]
repository = "https://github.com/Wervice/zentrox"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = { version = "4.9.0", features = ["openssl"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
dirs = "5.0.1"
flate2 = "1.0.34"
futures = "0.3.30"
hex = "0.4.3"
openssl = { version = "0.10.66" }
rand = "0.8.5"
regex = "1.10.6"
ring = "0.17.8"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
sysinfo = "0.31.2"
systemstat = "0.2.3"
tar = "0.4.42"
tokio = "1.40.0"
toml = "0.8.19"
toml_edit = "0.22.20"
totp-rs = "5.6.0"
whoami = "1.5.1"

[profile.release]
opt-level = 3
debug = 0

[[bin]]
name = "zentrox"
path = "src/main.rs"
include = ["static/**/*", "install.bash", "ftp.py", "robots.txt", "statics.tar.gz"]
