[package]
name = "frontend"
version = "0.1.0"
authors = ["Wervice <wervice@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
gloo-net = { version = "0.6.0", features = ["http", "json", "websocket"] }
serde = { version = "1.0.228", features = ["derive"] }
web-sys = { version = "0.3.85", features = ["RequestCredentials"] }
tracing = "0.1.44"
api = { path = "../api/" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
