[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
dirs = "5.0.1"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
totp-rs = "5.6.0"
whoami = "1.5.1"
uuid = { version = "1.11.0", features = ["v4"]}
aho-corasick = "1.1.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
log = "0.4.27"
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
base32 = "0.5.1"
utoipa = { version = "5.4.0", features = ["macros"] }
chrono = "0.4.42"
